# cookiecutter-mlflow-mlproject

./: LICENSE  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: .env_example  .pre-commit-config.yaml  Dockerfile  MLproject  requirements.txt
{{cookiecutter.project_slug}}/src/: predict.py
{{cookiecutter.project_slug}}/src/entry_points/: train.py
