[tool.poetry]
name = "cookiecutter-mlflow-mlproject"
version = "0.1.0"
description = "Cookie cutter template to create containerized MLflow Projects for production"
authors = ["kagan.kalafat <kagangurcan.kalafat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"